@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 
 Version 6.0.1 (SVN branch-6-0):
 ---------------------------
+- Applied patch for ticket (symbol writing issues) (#3589)
+
 - Fix performance issue with Oracle and scrollable cursors (#3905)
 
 - Fix attribute binding for layer styles (#3941)
